--- a/css/general.css
+++ b/css/general.css
@@ -14,6 +14,7 @@ Bold:700
 Default:1
 Small:1.05, 
 Medium:1.2,
+large:1.8
 paragraph default:1.6
 
 LETTER SPACING
@@ -59,6 +60,7 @@ html {
   /* 10px/16px= 0.625= 62.5% */
   /* Percentage of user's browser font-size setting */
   font-size: 62.5%;
+  overflow-x: hidden;
 }
 
 Body {
@@ -66,6 +68,7 @@ Body {
   line-height: 1;
   font-weight: 400;
   color: #555;
+  overflow-x: hidden;
 }
 
 /* ******************************* */
@@ -219,6 +222,7 @@ Body {
   display: flex;
   align-items: center;
   gap: 1.6rem;
+  line-height: 1.2;
 }
 
 .list-icon {
