--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,7 @@
   background-color: #fdf2e9;
   height: 9.6rem;
   padding: 0 4.8rem;
+  position: relative;
 }
 
 .logo {
@@ -21,7 +22,7 @@
   list-style: none;
   display: flex;
   align-items: center;
-  gap: 3.2rem;
+  gap: 4.8rem;
 }
 
 .main-nav-link:link,
@@ -51,12 +52,32 @@
 .main-nav-link.nav-cta:active {
   background-color: #cf711f;
 }
+
+/* mobile */
+.btn-mobile-nav {
+  border: none;
+  background: none;
+  cursor: pointer;
+
+  display: none;
+}
+
+.icon-mobile-nav {
+  height: 4.8rem;
+  width: 4.8rem;
+  color: #333;
+}
+
+.icon-mobile-nav[name="close-outline"] {
+  display: none;
+}
+
 /* *******************************  */
 /* HERO SECTION  */
 /* ******************************* */
 .section-hero {
   background-color: #fdf2e9;
-  padding: 4.8rem 9.6rem 0;
+  padding: 4.8rem 0 9.6rem 0;
 }
 
 .hero-container {
