--- a/css/queries.css
+++ b/css/queries.css
@@ -229,7 +229,7 @@
   .btn,
   .btn:link,
   .btn:visited {
-    padding: 2.4rem 0.6rem;
+    padding: 2.4rem 1.6rem;
   }
 
   .section-hero {
@@ -246,5 +246,39 @@
 
   .logos img {
     height: 1.2rem;
+  }
+
+  .step-img-box:nth-child(2) {
+    grid-row: 1;
+  }
+
+  .step-img-box:nth-child(6) {
+    grid-row: 5;
+  }
+
+  .step-img-box {
+    transform: translateY(2.4rem);
+  }
+
+  .testimonials {
+    grid-template-columns: 1fr;
+  }
+
+  .gallery {
+    grid-template-columns: repeat(4, 1fr);
+    gap: 1.2rem;
+  }
+
+  .cta {
+    grid-template-columns: 1fr;
+  }
+
+  .cta-text-box {
+    padding: 3.2rem;
+  }
+
+  .cta-img-box {
+    height: 32rem;
+    grid-row: 1;
   }
 }
