feature navigation-sticky

--- a/css/general.css
+++ b/css/general.css
@@ -60,7 +60,8 @@ html {
   /* 10px/16px= 0.625= 62.5% */
   /* Percentage of user's browser font-size setting */
   font-size: 62.5%;
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
+  /* scroll-behavior: smooth; */
 }
 
 Body {
